# cagoule-bench-v2

./: .gitignore  README.md  cagoule_bench.toml  pyproject.toml
.cagoule_bench/: history.db
.github/workflows/: bench.yml
bench/: __init__.py  cli.py  config.py  orchestrator.py
bench/db/: __init__.py  history.py
bench/metrics/: __init__.py  cpu_collector.py  memory_collector.py  stats.py  time_collector.py
bench/reporters/: __init__.py  console_reporter.py  data_reporters.py  html_reporter.py  notebook_reporter.py
bench/suites/: __init__.py  avx2_suite.py  base.py  ctr_suite.py  encryption_suite.py  kdf_suite.py  memory_suite.py  parallel_suite.py  streaming_suite.py
cagoule_bench.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
tests/: test_config.py  test_db.py  test_stats.py  test_suites.py
