[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cagoule-bench"
version = "2.1.0"
description = "Suite de benchmarking cryptographique pour CAGOULE v2.3.0"
authors = [{ name = "LASS", email = "slimissa@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cagoule>=2.2.0",
    "cryptography>=41.0",
    "argon2-cffi>=21.3",
    "psutil>=5.9",
    "rich>=13.0",
    "click>=8.1",
    "jinja2>=3.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
notebook = [
    "nbformat>=5.9",
]

[project.scripts]
cagoule-bench = "bench.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -m 'not slow'"
markers = [
    "slow: tests intégration réels (crypto KDF multiprocess) — lancer avec: pytest -m slow",
    "db: tests base de données historique",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E701", "E731"]
# ── Configuration cagoule-bench (optionnelle) ─────────────────────────────────
# Copier dans votre projet et adapter. cagoule-bench cherche ce fichier en
# remontant depuis le cwd (comme pyproject.toml).
# [tool.cagoule-bench]
# iterations = 500
# warmup = 10
# suites = ["encryption", "kdf"]
# output_dir = "./results"
# regression_threshold = -5.0
# db_path = ".cagoule_bench/history.db"